tests/typechecker/should_fail/duplicated_definitions_let.csp
P = 
	let
		Q = 2
		Q = 4
	in
		Q